# internal/model/user.go
@@ -12,7 +12,7 @@ type User struct {
 	FirstName     string    `json:"first_name" bun:"first_name"`
 	LastName      string    `json:"last_name" bun:"last_name"`
 	Email         string    `json:"email" bun:"email"`
-	Password      string    `json:"password" bun:"password"`
+	Password      string    `json:"-" bun:"password"`
 	CreatedAt     time.Time `json:"created_at" bun:"created_at"`
 	UpdatedAt     time.Time `json:"updated_at" bun:"updated_at"`
 }
@@ -22,4 +22,10 @@ type CreateUserRequest struct {
 	LastName  string `json:"last_name" binding:"required,min=3,max=255"`
 	Email     string `json:"email" binding:"required,email"`
 	Password  string `json:"password" binding:"required,min=8,max=255"`
+}
+
+type UpdateUserRequest struct {
+	FirstName string `json:"first_name" binding:"required,min=3,max=255"`
+	LastName  string `json:"last_name" binding:"required,min=3,max=255"`
+	Email     string `json:"email" binding:"required,email"`
 }
